fix align

--- a/src/pages/home/projectcards/projectCard.scss
+++ b/src/pages/home/projectcards/projectCard.scss
@@ -33,7 +33,7 @@
         
             @include mobile {
                 display: grid;
-                grid-template-columns: 2fr 1fr; /* Two columns in a 2:1 ratio */
+                grid-template-columns: repeat(1, 1fr);
                 margin: 0 40px;
               }
     
@@ -46,7 +46,7 @@
               border-radius:30px;
               box-shadow: 0px 0px 12px -8px black;
               @include mobile{
-                margin: 0;
+                margin: 5px;
                 flex-wrap: wrap;
                 align-items: center;
                 height: 200px;
