--- a/src/pages/projects/introProj/introProj.scss
+++ b/src/pages/projects/introProj/introProj.scss
@@ -18,5 +18,11 @@
             -webkit-text-fill-color: transparent;
             margin-right: 20px;
         }
+
+        span{
+           
+        font-size: 2rem;
+         
+        }
     }
 }
